# here-tracking-c

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  Jenkinsfile  LICENSE  README.md  build.sh
app/: CMakeLists.txt
app/include/: here_tracking_tls_cert.h
app/src/: CMakeLists.txt  here_tracking_app.c  here_tracking_base64_mbedtls.c  here_tracking_base64_openssl.c  here_tracking_hmac_sha_mbedtls.c  here_tracking_hmac_sha_openssl.c  here_tracking_log.c  here_tracking_time.c  here_tracking_tls_cert.c  here_tracking_tls_mbedtls.c
app/test/: CMakeLists.txt  test_here_tracking_base64_mbedtls_no_mock.c  test_here_tracking_base64_openssl_no_mock.c  test_here_tracking_hmac_sha_mbedtls_no_mock.c  test_here_tracking_hmac_sha_openssl_no_mock.c  test_here_tracking_http_online.c  test_here_tracking_prod.c  test_here_tracking_time.c
cmake/: FindMbedTLS.cmake
include/: here_tracking.h  here_tracking_base64.h  here_tracking_error.h  here_tracking_hmac_sha.h  here_tracking_log.h  here_tracking_log_level.h  here_tracking_time.h  here_tracking_tls.h  here_tracking_version.h
include/internal/: here_tracking_data_buffer.h  here_tracking_http.h  here_tracking_http_defs.h  here_tracking_http_parser.h  here_tracking_oauth.h  here_tracking_tls_writer.h  here_tracking_utils.h  here_tracking_uuid_gen.h
src/: CMakeLists.txt  here_tracking.c  here_tracking_data_buffer.c  here_tracking_http.c  here_tracking_http_defs.c  here_tracking_http_parser.c  here_tracking_oauth.c  here_tracking_tls_writer.c  here_tracking_utils.c  here_tracking_uuid_gen.c  here_tracking_version.c
test/: CMakeLists.txt  test_here_tracking.c  test_here_tracking_data_buffer.c  test_here_tracking_http.c  test_here_tracking_http_parser.c  test_here_tracking_oauth.c  test_here_tracking_tls_writer.c  test_here_tracking_utils.c  test_here_tracking_uuid_gen.c  test_here_tracking_version.c
test/include/: here_tracking_test.h  mock_here_tracking_data_buffer.h  mock_here_tracking_http.h  mock_here_tracking_log.h  mock_here_tracking_time.h  mock_here_tracking_tls.h  mock_here_tracking_tls_writer.h  mock_here_tracking_uuid_gen.h
test/mocks/: mock_here_tracking_data_buffer.c  mock_here_tracking_http.c  mock_here_tracking_log.c  mock_here_tracking_time.c  mock_here_tracking_tls.c  mock_here_tracking_tls_writer.c  mock_here_tracking_uuid_gen.c
